Version 9.2 - xxxx edition. 22 January 2021

Added new ZX-Uno Prism video mode
Added Dandanator icon
Added TBBlue snx snapshot support
Added SamRam Gerton Lunter interface emulation
Added ZRCP commands:
-realtape-open
Added alternate Jupiter ACE rom: TODO: description
Added another fourth easter egg ;)

Improved CPC emulation: 
-Video scanlines rendering
-Joystick emulation
-Stereo emulation

Improved Debug I/O ports window: can now be backgrounded and it's reloaded continuously
Improved File spooling: delay can now be any value between 20 and 2000 ms (in increments of +20)

Improved menu interface:
-Added action to minimize all windows
-Added setting to ignore mouse click to open the menu
-Added more utf-8 characters support

Improved ZX-Uno emulation:
-Updated BIOS, Flash and ESXDOS (ESXDOS now runs 0.8.6 final version)
-Fixed bugs on mmc and flash storage layer which prevented to update bios, esxdos rom or entire flash from the BIOS
-Fixed chloe mmu mapping: bootm has priority. If bootm=1, can't map chloe. If bootm=0, can be chloe or +2a
-Added command line setting --zxuno-initial-64k to allow loading a initial 64kb block in bootm mode, bypassing the normal boot rom

Improved TBBlue emulation:
-Added debug window to enable/disable individual sprites
-Added relative sprite type composite/unified on sprite navigator
-Added Sprites Debug memory zone
-Optimize sprite rendering (saving 1% cpu on my computer)

Fixed CPC bugs:
-Fixed vsync and hsync interrupts
-Fixed border colour
-Fixed AY chip register selection
-Fixed CRTC interrupts. After a CRTC interrupt with Z80 interrupts disabled, they were not fired when enabling Z80 interrupts
-Fixed setting bit 4 of the "Select screen mode and rom configuration" register of the Gate-Array and interrupt request

Fixed TBBlue bugs:
-Fixed relative sprites when anchor sprite is not visible
-Fixed relative sprites and negative coordinates
-Fixed relative unified sprites
-Fixed writing on divmmc memory when layer2 active